# linear-dollar-segv-ghci

./: .ghci  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  linear-dollar-segv-ghci.cabal
src/: Main.hs
